tproxy/src/main_service/snapshots/tproxy__main_service__tests__config-2.snap
---
source: tproxy/src/main_service/tests.rs
assertion_line: 31
expression: info1
---
HostInfo {
    id: "test-id-1",
    ip: 10.0.0.2,
    public_key: "test-pubkey-1",
}
