tproxy/src/main_service/snapshots/tproxy__main_service__tests__config-3.snap
---
source: tproxy/src/main_service/tests.rs
assertion_line: 34
expression: wg_config
snapshot_kind: text
---
[Interface]
PrivateKey = 
ListenPort = 51820


[Peer]
PublicKey = test-pubkey-0
AllowedIPs = 10.0.0.2/32

[Peer]
PublicKey = test-pubkey-1
AllowedIPs = 10.0.0.3/32
