tproxy/src/main_service/snapshots/tproxy__main_service__tests__config.snap
---
source: tproxy/src/main_service/tests.rs
assertion_line: 26
expression: info
---
HostInfo {
    id: "test-id-0",
    ip: 10.0.0.2,
    public_key: "test-pubkey-0",
}
