tproxy/src/main_service/snapshots/tproxy__main_service__tests__empty_config-2.snap
---
source: tproxy/src/main_service/tests.rs
assertion_line: 16
expression: wg_config
---
[Interface]
PrivateKey = your_private_key_here
ListenPort = 51820
Address = 10.0.0.1/24
